# cs207project

./: .gitignore  .travis.yml  12  AUTHORS.rst  CHANGES.rst  README.md  README.rst  Untitled.ipynb  meetingNotes-2016Oct30.txt  postgres_test_metadata.py  requirements.txt  setup.cfg  setup.py  smoke_test_33.json
TimeseriesDB/: DatabaseServer.py  MessageFormatting.py  PlayCC.ipynb  README.md  __init__.py  generate_SMTimeseries.py  play4.ipynb  server.py  server2.py  setup.cfg  setup.py  simsearch_init.py  tsdb_error.py
TimeseriesDB/FSM_filestorage/: index.p  ts_0.npy  ts_1.npy  ts_10.npy  ts_100.npy  ts_101.npy  ts_102.npy  ts_103.npy  ts_104.npy  ts_105.npy  ts_106.npy  ts_107.npy  ts_108.npy  ts_109.npy  ts_11.npy  ts_110.npy  ts_111.npy  ts_112.npy  ts_113.npy  ts_114.npy  ts_115.npy  ts_116.npy  ts_117.npy  ts_118.npy  ts_119.npy  ts_12.npy  ts_120.npy  ts_121.npy  ts_122.npy  ts_123.npy  ts_124.npy  ts_125.npy  ts_126.npy  ts_127.npy  ts_128.npy  ts_129.npy  ts_13.npy  ts_130.npy  ts_131.npy  ts_132.npy  (+961 more)
TimeseriesDB/TimeseriesDB/FSM_filestorage/: ts_0.npy  ts_1.npy  ts_10.npy  ts_100.npy  ts_101.npy  ts_102.npy  ts_103.npy  ts_104.npy  ts_105.npy  ts_106.npy  ts_107.npy  ts_108.npy  ts_109.npy  ts_11.npy  ts_110.npy  ts_111.npy  ts_112.npy  ts_113.npy  ts_114.npy  ts_115.npy  ts_116.npy  ts_117.npy  ts_118.npy  ts_119.npy  ts_12.npy  ts_120.npy  ts_121.npy  ts_122.npy  ts_123.npy  ts_124.npy  ts_125.npy  ts_126.npy  ts_127.npy  ts_128.npy  ts_129.npy  ts_13.npy  ts_130.npy  ts_131.npy  ts_132.npy  ts_133.npy  (+960 more)
TimeseriesDB/docs/: conf.py
TimeseriesDB/docs/_build/doctrees/: environment.pickle  index.doctree
TimeseriesDB/docs/_build/doctrees/api/: TimeseriesDB.doctree  (+1 more)
TimeseriesDB/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
TimeseriesDB/docs/_build/man/: timeseriesdb.1
TimeseriesDB/docs/api/: modules.rst
(+4593 files in other folders)
