[metadata]
name = TimeseriesDB
summary = Final Project submission for CS207 Fall 2016 (Team 1)
author = Team 1 SAnoke ABrennan CCochrane LWare
author-email = sanoke527@gmail.com
license = mit
home-page = https://github.com/slac207/cs207project/TimeseriesDB
description-file = README.md
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = cs207rbtree.module:function
# For example:
# console_scripts =
#     fibonacci = cs207rbtree.skeleton:run
# as well as other entry_points.


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    ['timeseries', 'Similarity']
# data_files =
#    share/cs207rbtree_docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[pytest]
# py.test options when running `python setup.py test`
addopts = --doctest-modules --cov-report term-missing --cov TimeseriesDB 

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
